<resources>
    <string name="app_name">Graduation Project</string>


    <!--activity headers.-->
    <string name="home">Home</string>
    <string name="subject">Subject</string>
    <string name="attendance">Attendance</string>
    <string name="chat">Chat Room</string>
    <string name="table">Table</string>
    <string name="grades">Grade</string>
    <string name="title_activity_signin">Signin</string>
    <string name="title_activity_signup">Signup</string>


    <!-- spinner test list.  -->
    <string-array name="Subject">
        <item>Solid</item>
        <item>Nuclear</item>
        <item>Electronics</item>
        <item>Low Temperature</item>
        <item>Theory pf computation</item>
        <item>Compiler design</item>
        <item>Networking</item>
        <item>Image processing</item>
    </string-array>

    <!-- home buttons titles. -->
    <string name="todo">TODO</string>
    <string name="grade">Grade</string>

    <!-- signup titles -->
    <string name="sign_up">SIGN UP</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="retype_password">Retype Password</string>
    <string name="_1st_year">1St Year</string>
    <string name="_2nd_year">2nd </string>
    <string name="_3rd_year">3rd </string>
    <string name="_4th_year">4th </string>
    <string name="year">Year</string>
    <string name="department">Department</string>
    <string name="submit">SUBMIT</string>
    <string name="student">Student</string>
    <string name="doctor">Doctor</string>
    <string-array name="Depatrment" >
        <item>Mathematics and Computer Science</item>
        <item>Statistics and Computer Science</item>
        <item>physics and Computer Science</item>
        <item></item>
    </string-array>

    <!-- signin titles -->


    <string name="welcome">Welcome To FSHU</string>

    <string name="login">LOGIN</string>
    <string name="sing_up">SING UP</string>

    <string name="remember_me">Remember Me</string>


</resources>
